# AGENT

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  index.ts  package-lock.json  package.json  tsconfig.json
.gitee/: PULL_REQUEST_TEMPLATE.md
.gitee/ISSUE_TEMPLATE/: bug.md  feature.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
1-agent/: .gitignore  README.md  index.html  package.json  vite.config.js
1-agent/server/: chat.js  db.js  index.js  prompt.js
1-core/: package.json
1-core/server/: db.js  index.js  messages.js  ws.js
1-core/ui/: App.vue
2-agents/: package.json
2-agents/server/: chat.js  config.js  conversations.js  db.js  index.js  messages.js  prompt.js  settings.js  ws.js
ai/: functions.js  handler.js  handler.ts  index.ts  runner.js  tools.js  utils.js  utils.ts
cli/: Cargo.toml  README.md  index.ts  runtime.ts
cli/commands/: chat.ts  health.ts  repl.ts  settings.ts
cli/lib/: chat.js  chat.ts  http.ts  server.ts  sse.ts
cli/migrations/: 0001_initial.sql
cli/releases/v0.1.0/: .env.example  README.md  SHA256SUMS.txt
cli/src/: agent.rs  args.rs  config.rs  llm.rs  main.rs  model.rs  tools.rs
cli/src/repository/: mod.rs
cli/src/terminal/: mod.rs
gui/: index.html  package-lock.json  package.json  start.ts  vite.config.ts
llm/: client.ts  common.ts  index.js  index.ts  providers.js  regular.ts
releases/: README.md
scripts/: build-release.mjs
server/: index.js  index.ts
ui/: App.vue  style.css
(+226 files in other folders)
